--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@ target
 *.md
 !README.md
 
+# Not tracking assets directory
+assets
+
 # RustRover
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
