--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,8 @@ edition = "2024"
 
 [features]
 default = []
-gpu = []
-cpu = []
+gpu = ["dep:vello", "dep:vello_svg", "dep:pollster"]
+cpu = ["dep:vello_cpu"]
 hybrid = []
 cli = []
 napi = []
@@ -16,11 +16,15 @@ anyhow = "1"
 image = "0.25.9"
 kurbo = { version = "0.13", features = ["serde"] }
 parley = { version = "0.7.0", default-features = false, features = ["std"] }
+pollster = { version = "0.4.0", optional = true }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 thiserror = "2"
 tracing = { version = "0.1", features = ["attributes"] }
 usvg = { version = "0.46.0", default-features = false, features = ["text"] }
+vello = { version = "0.7.0", optional = true, default-features = false, features = ["wgpu"] }
+vello_cpu = { version = "0.0.6", optional = true, default-features = false, features = ["std", "text", "u8_pipeline"] }
+vello_svg = { version = "0.9.0", optional = true, default-features = false }
 
 [dev-dependencies]
 tracing-subscriber = { version = "0.3", features = ["fmt"] }
