--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 
 [features]
 default = []
-gpu = ["dep:vello", "dep:vello_svg", "dep:pollster"]
+gpu = ["dep:vello", "dep:vello_svg", "dep:pollster", "dep:wgpu"]
 cpu = ["dep:vello_cpu"]
 hybrid = []
 cli = []
@@ -25,6 +25,7 @@ usvg = { version = "0.46.0", default-features = false, features = ["text"] }
 vello = { version = "0.7.0", optional = true, default-features = false, features = ["wgpu"] }
 vello_cpu = { version = "0.0.6", optional = true, default-features = false, features = ["std", "text", "u8_pipeline"] }
 vello_svg = { version = "0.9.0", optional = true, default-features = false }
+wgpu = { version = "27.0.1", optional = true, default-features = false, features = ["std", "wgsl", "dx12", "metal", "gles", "vulkan"] }
 
 [dev-dependencies]
 tracing-subscriber = { version = "0.3", features = ["fmt"] }
