--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [features]
-default = []
+default = ["cpu"]
 gpu = ["dep:vello", "dep:vello_svg", "dep:pollster", "dep:wgpu"]
-cpu = ["dep:vello_cpu"]
+cpu = ["dep:vello_cpu", "dep:resvg"]
 hybrid = []
 cli = []
 napi = []
@@ -22,6 +22,7 @@ serde_json = "1"
 thiserror = "2"
 tracing = { version = "0.1", features = ["attributes"] }
 usvg = { version = "0.46.0", default-features = false, features = ["text"] }
+resvg = { version = "0.46.0", optional = true, default-features = false }
 vello = { version = "0.7.0", optional = true, default-features = false, features = ["wgpu"] }
 vello_cpu = { version = "0.0.6", optional = true, default-features = false, features = ["std", "text", "u8_pipeline"] }
 vello_svg = { version = "0.9.0", optional = true, default-features = false }
