--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ parley = { version = "0.7.0", default-features = false, features = ["std"] }
 pollster = { version = "0.4.0", optional = true }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+sha2 = "0.10.8"
 thiserror = "2"
 tracing = { version = "0.1", features = ["attributes"] }
 usvg = { version = "0.46.0", default-features = false, features = ["text", "system-fonts", "memmap-fonts"] }
