--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,12 +14,13 @@ include = ["src/**", "tests/**", "examples/**", "Cargo.toml", "Cargo.lock", "REA
 
 [features]
 default = []
-gpu = ["dep:vello", "dep:pollster", "dep:wgpu"]
 
 [package.metadata.docs.rs]
-features = ["gpu"]
 targets = ["x86_64-unknown-linux-gnu"]
 rustdoc-args = ["--cfg", "docsrs"]
+
+[profile.dev]
+debug = 0
 
 [dependencies]
 anyhow = "1"
@@ -27,7 +28,6 @@ clap = { version = "4.5.57", features = ["derive"] }
 image = "0.25.9"
 kurbo = { version = "0.13", features = ["serde"] }
 parley = { version = "0.7.0", default-features = false, features = ["std"] }
-pollster = { version = "0.4.0", optional = true }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 sha2 = "0.10.8"
@@ -35,9 +35,7 @@ thiserror = "2"
 tracing = { version = "0.1", features = ["attributes"] }
 usvg = { version = "0.46.0", default-features = false, features = ["text", "system-fonts", "memmap-fonts"] }
 resvg = { version = "0.46.0", default-features = false, features = ["text", "system-fonts", "memmap-fonts"] }
-vello = { version = "0.7.0", optional = true, default-features = false, features = ["wgpu"] }
 vello_cpu = { version = "0.0.6", default-features = false, features = ["std", "text", "u8_pipeline"] }
-wgpu = { version = "27.0.1", optional = true, default-features = false, features = ["std", "wgsl", "dx12", "metal", "gles", "vulkan"] }
 
 [dev-dependencies]
 tracing-subscriber = { version = "0.3", features = ["fmt"] }
