--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ parley = { version = "0.7.0", default-features = false, features = ["std"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 sha2 = "0.10.8"
+rayon = "1.11.0"
 thiserror = "2"
 tracing = { version = "0.1", features = ["attributes"] }
 usvg = { version = "0.46.0", default-features = false, features = ["text", "system-fonts", "memmap-fonts"] }
