--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "wavyte"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2024"
 rust-version = "1.93"
 license = "AGPL-3.0-only"
-description = "Programmatic video composition and rendering in Rust (CPU by default, optional GPU, ffmpeg MP4 encoding)"
+description = "Programmatic video composition and rendering in Rust (CPU backend, ffmpeg MP4 encoding)"
 repository = "https://github.com/Wavyte/wavyte"
 homepage = "https://github.com/Wavyte/wavyte"
 documentation = "https://docs.rs/wavyte"
@@ -14,6 +14,7 @@ include = ["src/**", "tests/**", "examples/**", "Cargo.toml", "Cargo.lock", "REA
 
 [features]
 default = []
+media-ffmpeg = []
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
