--- a/wavyte/Cargo.toml
+++ b/wavyte/Cargo.toml
@@ -33,6 +33,7 @@ parley = { version = "0.7.0", default-features = false, features = ["std"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 rayon = "1.11.0"
+smallvec = "1.13.2"
 stats_alloc = { version = "0.1.10", optional = true }
 thiserror = "2"
 tracing = { version = "0.1", features = ["attributes"] }
