--- a/wavyte/Cargo.toml
+++ b/wavyte/Cargo.toml
@@ -35,6 +35,7 @@ serde_json = "1"
 rayon = "1.11.0"
 smallvec = "1.13.2"
 stats_alloc = { version = "0.1.10", optional = true }
+taffy = "0.9.2"
 thiserror = "2"
 tracing = { version = "0.1", features = ["attributes"] }
 usvg = { version = "0.46.0", default-features = false, features = ["text", "system-fonts", "memmap-fonts"] }
